<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".Fragmenti.importantInformations">

        <TextView
            android:id="@+id/tvImportant1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant1"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tvImportant2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant2"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvImportant3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant3"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvImportant4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant4"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvImportant5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant5"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvImportant6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant6"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvImportant7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvimportant7"
            android:fontFamily="sans-serif-thin"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>
