<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="user"
            type="com.example.obrtstanar.UserViewModel">
        </variable>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".Fragmenti.Profile">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/name"
            android:text="@={user.name}"
            />
        <EditText
            android:id="@+id/userLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:textColor="@color/colorPrimary"
            android:hint="@string/lastname"
            android:backgroundTint="@color/colorPrimary"
            android:text="@={user.lastname}"
            />
        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userLastname"
            android:textColor="@color/colorPrimary"
            android:hint="@string/email"
            android:backgroundTint="@color/colorPrimary"
            android:text="@={user.email}"
            android:editable="false"
            />
        <EditText
            android:id="@+id/userPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userEmail"
            android:textColor="@color/colorPrimary"
            android:hint="@string/phoneNumber"
            android:backgroundTint="@color/colorPrimary"
            android:text="@={user.phoneNumber}"
            />
        <EditText
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPhoneNumber"
            android:textColor="@color/colorPrimary"
            android:hint="@string/regaddress"
            android:backgroundTint="@color/colorPrimary"
            android:text="@={user.address}"
            />
        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/userAddress"
            android:fontFamily="sans-serif-thin"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/btnResetPassword"
            />
        <Button
            android:id="@+id/btnSetNotification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/btnResetPassword"
            android:fontFamily="sans-serif-thin"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/adminSetNotification"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/btnSeeFailures"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/btnSetNotification"
            android:fontFamily="sans-serif-thin"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:textColor="#FFFFFF"
            android:text="@string/adminSeeFailures"
            />
        <Button
            android:id="@+id/btnUpdateData"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-thin"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/btnazurirajpodatke"
            />

    </RelativeLayout>

</layout>
