<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25sp"
    android:background="@color/colorPrimary"
    tools:context=".LoginUser">

    <EditText
        android:id="@+id/edEmail"
        android:layout_above="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF"
        android:hint="@string/email"
        android:fontFamily="sans-serif-thin"
        />

    <EditText
        android:id="@+id/edPassword"
        android:layout_above="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:hint="@string/password"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        />
    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLogin"
        android:fontFamily="sans-serif-thin"
        />

</RelativeLayout>