<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="registration"
            type="com.example.obrtstanar.RegistrationViewModel">
        </variable>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Registration">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back"/>
            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:layout_below="@id/imgBack"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.name}"
                />
            <EditText
                android:id="@+id/edLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/edName"
                android:hint="@string/lastname"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.lastname}"
                />
            <EditText
                android:id="@+id/edPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/edLastname"
                android:hint="@string/phoneNumber"
                android:fontFamily="sans-serif-thin"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.phoneNumber}"
                />
            <EditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/edPhoneNumber"
                android:hint="@string/regaddress"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.address}"
                />
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edAddress"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.email}"
                />
            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edEmail"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.password}"
                />
            <EditText
                android:id="@+id/edConfPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edPassword"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/confpass"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@={registration.confPass}"

                />
            <Button
                android:id="@+id/btnRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doregistration"
                android:layout_below="@+id/edConfPass"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-thin"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:paddingRight="10dp" />
        </RelativeLayout>
    </ScrollView>

</layout>
