<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragmenti.Contact"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgContactTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/lapovci3"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/tvobrtstanarvlasnik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/obrtstanarvlasnik"/>

        <TextView
            android:id="@+id/tvRadnoVrijeme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/radnovrijeme"/>

        <TextView
            android:id="@+id/tvTelMob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/telmob" />

        <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/emailaddress" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/address"/>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/map"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>
    </LinearLayout>



</ScrollView>
